Move to new structure

--- a/test/Soenneker.Json.CollectionConverter.Tests/Soenneker.Json.CollectionConverter.Tests.csproj
+++ b/test/Soenneker.Json.CollectionConverter.Tests/Soenneker.Json.CollectionConverter.Tests.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\src\Soenneker.Json.CollectionConverter.csproj" />
+        <ProjectReference Include="..\..\src\Soenneker.Json.CollectionConverter.csproj" />
     </ItemGroup>
 
 </Project>
