--- a/test/Soenneker.Json.CollectionConverter.Tests/Soenneker.Json.CollectionConverter.Tests.csproj
+++ b/test/Soenneker.Json.CollectionConverter.Tests/Soenneker.Json.CollectionConverter.Tests.csproj
@@ -12,7 +12,7 @@
     <PackageReference Include="FluentAssertions" Version="7.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="Soenneker.Enums.DeployEnvironment" Version="3.0.141" />
-    <PackageReference Include="xunit" Version="2.9.2" />
+    
     
     <PackageReference Include="xunit.runner.visualstudio" Version="3.0.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -22,7 +22,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-  </ItemGroup>
+  <PackageReference Include="xUnit.v3" Version="1.0.0" /></ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\..\src\Soenneker.Json.CollectionConverter.csproj" />
