--- a/test/Soenneker.Json.CollectionConverter.Tests/Soenneker.Json.CollectionConverter.Tests.csproj
+++ b/test/Soenneker.Json.CollectionConverter.Tests/Soenneker.Json.CollectionConverter.Tests.csproj
@@ -9,11 +9,9 @@
 
   <ItemGroup>
     <PackageReference Include="Ardalis.SmartEnum.SystemTextJson" Version="8.1.0" />
-    <PackageReference Include="FluentAssertions" Version="8.0.1" />
+    <PackageReference Include="AwesomeAssertions" Version="8.0.0-rc.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="Soenneker.Enums.DeployEnvironment" Version="3.0.158" />
-    
-    
     <PackageReference Include="xunit.runner.visualstudio" Version="3.0.1">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
